<resources>
    <string name="app_name">MongsilDiary</string>
    <string name="admob_app_id">ca-app-pub-1939032811151400~2635857613</string>
    <string name="banner_ad_unit_id">ca-app-pub-1939032811151400/5808815862</string>
    <string name="banner_ad_unit_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_calender_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ad_attribution">Ad</string>
    <string name="main_title">오늘을 기록해요</string>
    <string name="morning">아침</string>
    <string name="afternoon">점심</string>
    <string name="evening">저녁</string>
    <string name="end_of_the_day">하루 끝</string>
    <string name="night">밤</string>
    <string name="record">Record.</string>
    <string name="this_month_mongsil">이달의 몽실이</string>
    <string name="add">Add +</string>
    <string name="setting">Setting</string>
    <string name="record_text">어떤 소소한 일상이었나요?\n기록해보세요.</string>
    <string name="cheer_up_contents">하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나</string>
    <string name="calendar">Calendar</string>
    <string name="cheering">Cheering</string>
    <string name="test_text">하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나하루가 저무는 것처럼 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나 걱정도 저무는 밤이 길 두줄까지 테스트 두줄 두줄 주줄 최대 세주락지 노출노출 뭐 들어가려나</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="record_tv">Record. 수정/쓰기</string>
    <string name="editText_input_phrases">내용을 입력해 보세요</string>
    <string name="finish">완료</string>
    <string name="push_allow">푸쉬 동의</string>
    <string name="font_setting">글꼴 설정</string>
    <string name="diary_backup">일기장 백업</string>
    <string name="review_writing">앱 리뷰쓰기</string>
    <string name="inquiry">건의/문의하기</string>
    <string name="developer_another_app">개발자의 다른 앱</string>
    <string name="version">Version 0.1</string>
    <string name="advertising_text1">광고 시청 시</string>
    <string name="advertising_text2">24h Free</string>
    <string name="a_month_record">한달의 기록</string>
    <string name="this_month_mongsil_empty_text">등록된 몽실이가 없어요\n기록을 시작해보세요!</string>
    <string name="null_check">null check</string>

    <string-array name="custom_month">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>

    <integer name="screen_in_time">200</integer>
    <integer name="screen_out_time">200</integer>

</resources>