<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/push_btn"
        style="@style/Text.setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/push_allow"
        app:layout_constraintLeft_toLeftOf="@id/setting_title"
        app:layout_constraintTop_toBottomOf="@id/setting_title" />

    <TextView
        android:id="@+id/font_btn"
        style="@style/Text.setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/font_setting"
        app:layout_constraintLeft_toLeftOf="@id/setting_title"
        app:layout_constraintTop_toBottomOf="@id/push_btn" />

    <TextView
        android:id="@+id/backup_btn"
        style="@style/Text.setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/diary_backup"
        app:layout_constraintLeft_toLeftOf="@id/setting_title"
        app:layout_constraintTop_toBottomOf="@id/font_btn" />

    <TextView
        android:id="@+id/review_btn"
        style="@style/Text.setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/review_writing"
        app:layout_constraintLeft_toLeftOf="@id/setting_title"
        app:layout_constraintTop_toBottomOf="@id/backup_btn" />

    <TextView
        android:id="@+id/inquiry_btn"
        style="@style/Text.setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/inquiry"
        app:layout_constraintLeft_toLeftOf="@id/setting_title"
        app:layout_constraintTop_toBottomOf="@id/review_btn" />

    <TextView
        android:id="@+id/another_app_btn"
        style="@style/Text.setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/developer_another_app"
        app:layout_constraintLeft_toLeftOf="@id/setting_title"
        app:layout_constraintTop_toBottomOf="@id/inquiry_btn" />

    <TextView
        style="@style/Text.setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="44dp"
        android:letterSpacing="-0.05"
        android:textSize="12sp"
        android:lineSpacingExtra="14sp"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>