<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/date"
                style="@style/Text.222222_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/s_core_dream_4"
                app:layout_constraintLeft_toLeftOf="@id/container"
                app:layout_constraintTop_toTopOf="@id/container"
                tools:text="2022.04" />

            <TextView
                android:id="@+id/calendar_title"
                style="@style/Text.222222_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/s_core_dream_6"
                android:text="@string/a_month_record"
                android:textSize="28sp"
                app:layout_constraintLeft_toLeftOf="@id/date"
                app:layout_constraintTop_toBottomOf="@id/date" />

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/round_20_calendar"
                android:elevation="2dp"
                android:theme="@style/CalenderViewCustom"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar_title"
                app:mcv_headerTextAppearance="@style/CalendarWidgetHeader"
                app:mcv_selectionColor="@color/transparent"
                app:mcv_showOtherDates="defaults"
                app:mcv_weekDayLabels="@array/custom_month"
                app:mcv_weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

            <FrameLayout
                android:id="@+id/calendar_admob"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                ads:adUnitId="@string/native_calender_ad_unit_id"
                app:layout_constraintTop_toBottomOf="@id/calendar"
                ads:gnt_template_type="@layout/gnt_medium_template_view"
                android:background="@drawable/calendar_admob"
                />

            <TextView
                android:id="@+id/this_month_mongsil_container"
                android:layout_width="match_parent"
                android:layout_height="258dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="94dp"
                android:background="@drawable/round_20_ffffff"
                android:elevation="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar_admob" />

            <TextView
                android:id="@+id/this_month_mongsil_title"
                style="@style/Text.222222_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:elevation="3dp"
                android:fontFamily="@font/s_core_dream_6"
                android:text="@string/this_month_mongsil"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/this_month_mongsil_container"
                app:layout_constraintTop_toTopOf="@id/this_month_mongsil_container" />

            <TextView
                android:id="@+id/this_month_mongsil_empty_text"
                style="@style/Text.cccfd7_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:elevation="3dp"
                android:fontFamily="@font/s_core_dream_4"
                android:gravity="center"
                android:lineSpacingExtra="10sp"
                android:text="@string/this_month_mongsil_empty_text"
                app:layout_constraintBottom_toBottomOf="@id/this_month_mongsil_container"
                app:layout_constraintEnd_toEndOf="@id/this_month_mongsil_container"
                app:layout_constraintStart_toStartOf="@id/this_month_mongsil_container"
                app:layout_constraintTop_toTopOf="@id/this_month_mongsil_container" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mongsil_recycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:clipToPadding="false"
                android:elevation="3dp"
                android:orientation="horizontal"
                android:paddingHorizontal="24dp"
                app:layout_constraintBottom_toBottomOf="@id/this_month_mongsil_container"
                app:layout_constraintLeft_toLeftOf="@id/this_month_mongsil_container"
                app:layout_constraintRight_toRightOf="@id/this_month_mongsil_container"
                app:layout_constraintTop_toBottomOf="@id/this_month_mongsil_title"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/this_month_mongsil" />

            <!--            <com.mongsil.mongsildiary.customView.ThisMonthMongsil-->
            <!--                android:id="@+id/first_mongsil"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginVertical="24dp"-->
            <!--                android:layout_marginLeft="32dp"-->
            <!--                android:elevation="3dp"-->
            <!--                app:count="1"-->
            <!--                app:emoticons="@drawable/ic_emoticon_01"-->
            <!--                app:layout_constraintBottom_toBottomOf="@id/this_month_mongsil_container"-->
            <!--                app:layout_constraintLeft_toLeftOf="@id/this_month_mongsil_container"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/this_month_mongsil_title"-->
            <!--                app:progress="50" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>